<?xml version="1.0"?>
<package format="3">
  <name>hotel_device_servers</name>
  <version>0.0.1</version>
  <description>Action servers for arm/elevator/room</description>
  <maintainer email="you@todo.todo">you</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>hotel_interfaces</depend>
  <depend>std_srvs</depend>

  <!-- 런치 파일을 이 패키지에 포함해서 쓸 경우 권장 -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>