<?xml version="1.0"?>
<package format="3">
  <name>tb3_hotel_mission</name>
  <version>0.0.1</version>
  <description>TurtleBot3 hotel mission manager (Nav2 + device actions)</description>
  <maintainer email="you@todo.todo">you</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>nav2_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <!-- tf2_ros를 쓰면 추가 -->
  <!-- <depend>tf2_ros</depend> -->

  <depend>hotel_interfaces</depend>

  <!-- 이 패키지에서 launch 파일을 제공하면 권장 -->
  <!-- <exec_depend>launch</exec_depend> -->
  <!-- <exec_depend>launch_ros</exec_depend> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>